--- a/app/views/wikis/_new.html.erb
+++ b/app/views/wikis/_new.html.erb
@@ -17,6 +17,15 @@
         <%= f.label :body %>
         <%= f.text_area :body, rows: 8, class: 'form-control', placeholder: "Enter wiki body." %>
     <% end %>
+    <% if policy(wiki).permitted_to_create_private_wiki? %>
+        <%= form_group_tag(wiki.errors[:private]) do %>
+            <p>Is this a private wiki? Then check the box below. All wikis are public by default.</p>
+            <%= f.label :private %>
+            <%= f.check_box :private, class: 'form-control' %>
+        <% end %>
+    <% else %>
+        <p>All wikis are public by default. To create a private wiki, sign up for a premium account.</p>
+    <% end %>
     <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
     </div>
