--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -4,6 +4,6 @@
         <p>Feel free to edit the wiki document.</p>
     </div>
     <div class="col-md-8">
-        <%= render partial: 'form', locals: { wiki: @wiki } %>
+        <%= render partial: 'edit', locals: { wiki: @wiki } %>
     </div>
 </div>
