--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -4,6 +4,6 @@
         <p>This is where you can start creating the wiki document.</p>
     </div>
     <div class="col-md-8">
-        <%= render partial: 'form', locals: { wiki: @wiki } %>
+        <%= render partial: 'new', locals: { wiki: @wiki } %>
     </div>
 </div>
