--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -2,7 +2,7 @@
     <h1>
         <%= @wiki.title %> <br>
         <small>
-            submitted <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.email %>
+            created <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.name %>
         </small>
     </h1>
 </div>
@@ -10,10 +10,12 @@
     <div class="col-md-8">
         <p><%= @wiki.body %></p>
     </div>
-    <% if user_is_authorized_for_wiki?(@wiki) %>
-        <div class="col-md-4">
+    <div class="col-md-4">
+        <% if policy(@wiki).edit? %>
             <%= link_to "Edit Wiki", edit_wiki_path, class: 'btn btn-success' %>
+        <% end %>
+        <% if policy(@wiki).destroy? %>
             <%= link_to "Delete Wiki", [@wiki], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
-        </div>
-    <% end %>
+        <% end %>
+    </div>
 </div>
