--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -8,7 +8,7 @@
 </div>
 <div class="row">
     <div class="col-md-8">
-        <p><%= @wiki.body %></p>
+        <%= @markdown.render(@wiki.body).html_safe %>
     </div>
     <div class="col-md-4">
         <% if policy(@wiki).edit? %>
