--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -11,6 +11,21 @@
         <%= @markdown.render(@wiki.body).html_safe %>
     </div>
     <div class="col-md-4">
+        <% if @wiki.private? %>
+            <h4>Current Collaborators</h4>
+            <% if @wiki.collaborations != [] %>
+                <%= render @wiki.collaborations %>
+                <br>
+            <% else %>
+                <p>There are currently no collaborators for this wiki.</p>
+                <br>
+            <% end %>
+            <% if policy(Collaboration.new(wiki: @wiki)).create? %>
+                <%= render partial: 'collaborations/add', locals: { wiki: @wiki, collaboration: @wiki.collaborations.new } %>
+                <br><br>
+            <% end %>
+        <% end %>
+
         <% if policy(@wiki).edit? %>
             <%= link_to "Edit Wiki", edit_wiki_path, class: 'btn btn-success' %>
         <% end %>
