--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,4 @@
 <div class="jumbotron">
-    <h1>Blocipedia</h1>
-    <p>Blocipedia is a collaboration space for any topic.</p>
+    <h1>Collab</h1>
+    <p>Collab is a wiki collaboration space for any topic.</p>
 </div>
