--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,3 +1,5 @@
-<div class="container">
-    Collab is a wiki app built on Rails.
+<div class="container main list">
+    <h1>About</h1>
+    <p>Collab is a wiki app built on Rails.</p>
+    <%= image_tag image_path("people.jpg"), class: "main-img" %>
 </div>
