--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,3 @@
-@import "bootstrap-sprockets";
-@import "bootstrap";
-
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
@@ -16,3 +13,208 @@
  *= require_tree .
  *= require_self
  */
+
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
+/* Variables */
+
+$dark-grey: #444;
+$medium-grey: #999;
+$light-grey: #dcdcdf;
+$magenta: #fa0273;
+$pink: #fbafd2;
+$aqua: #affbdf;
+$sea-foam: #05d2aa;
+
+/* Overall Styling */
+
+body {
+    background: url(image_path("aliens.jpg"));
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    font-family: serif;
+    color: white;
+}
+
+.alert {
+    background-color: $aqua;
+    color: $sea-foam;
+    font-weight: bold;
+}
+
+.alert-success {
+    background-color: $sea-foam;
+    color: white;
+    font-size: 2rem;
+}
+
+.alert-warning {
+    background-color: $magenta;
+    color: white;
+    font-size: 2rem;
+}
+
+.btn {
+    font-size: 2rem;
+    font-weight: normal;
+    margin: 20px 0px;
+    margin-right: 2%;
+}
+
+.btn-success {
+    background-color: $sea-foam;
+}
+
+.btn-success:hover {
+    background-color: $aqua;
+    color: $sea-foam;
+}
+
+.btn-danger {
+    background-color: $magenta;
+}
+
+.btn-danger:hover {
+    background-color: $pink;
+    color: $magenta;
+}
+
+/* Navbar Styling */
+
+.nav {
+    border: none;
+    margin-top: 5px;
+    font-size: 2rem;
+}
+
+.nav a {
+    color: $magenta;
+}
+
+.nav-tabs {
+    border: none;
+}
+
+.nav-tabs li {
+    border-radius: 7px;
+    border: none;
+}
+
+.nav-tabs li:hover {
+    border: none;
+    border-radius: 7px;
+    background-color: $light-grey;
+}
+
+.user-info {
+    margin-top: 9px;
+}
+
+.user-info a:hover {
+    font-weight: bold;
+    text-decoration: none;
+}
+
+.gravatar {
+    margin-bottom: 5px;
+    margin-right: 5px;
+}
+
+/* Content Styling */
+
+
+.main {
+    background-color: $dark-grey;
+    border-radius: 7px;
+    color: white;
+    font-family: serif;
+    margin-bottom: 4%;
+}
+
+.list {
+    font-size: 2rem;
+    padding: 2% 4%;
+}
+
+.list h1 {
+    color: $magenta;
+}
+
+.list-item {
+    padding: 2% 0%;
+}
+
+.small-img {
+    width: 80%;
+    border-radius: 7px;
+    margin: 5% 0%;
+}
+
+.img-a:hover {
+    border: 5px solid $magenta;    
+}
+
+.medium-img {
+    width: 100%;
+    border-radius: 7px;
+    margin-top: 13%;
+}
+
+.main-img {
+    width: 100%;
+    border-radius: 7px;
+    margin: 1%;
+}
+
+.collaborators a:hover {
+    text-decoration: none;
+    color: $magenta;
+}
+
+/* Form Styling */
+
+.form {
+    width: 100%;
+    padding: 5% 5%;
+    border-radius: 7px;
+    margin-bottom: 5%;
+    font-size: 2rem;
+}
+
+.form h2 {
+    color: $magenta;
+}
+
+.field {
+    width: 75%;
+    padding: 1% 0%;
+}
+
+.form input, .form textarea {
+    background-color: $medium-grey;
+    color: $light-grey;
+    border: none;
+    border-radius: 5px;
+    font-size: 2rem;
+}
+
+.form .actions input {
+    padding: 5px;
+    margin: 2% 0%;
+}
+
+.form .actions input:hover {
+    background-color: $light-grey;
+    color: $dark-grey;
+}
+
+.form .links {
+    padding: 1% 0%;
+}
+
+.form .links a:hover {
+    text-decoration: none;
+    color: $magenta;
+}
