--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Blocipedia</title>
+  <title>Collab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -10,21 +10,19 @@
 <body>
   <div class="container">
     <ul class="nav nav-tabs">
-      <li><%= link_to "Blocipedia", root_path %></li>
+      <li><%= link_to "Collab", root_path %></li>
       <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Wiki Index", wikis_path %></li>
+      <li><%= link_to "Spaces", wikis_path %></li>
+      <div class="pull-right user-info nav-tabs">
+        <% if user_signed_in? %>
+            Signed in as: <strong><%= current_user.name %></strong> |
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> | <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
+        <% else %>
+            <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
+            <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
+        <% end %>
+      </div>
     </ul>
-    
-    <div class="container">
-      <% if user_signed_in? %>
-          Signed in as: <strong><%= current_user.name %></strong> |
-          <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> - <%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-      <% else %>
-          <%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %> -
-          <%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %>
-      <% end %>
-    </div>
-    
     <% if flash[:notice] %>
       <div class="alert alert-success">
         <button type-"button" class="close" data-dismiss="alert">&times;</button>
@@ -36,10 +34,7 @@
         <%= flash[:alert] %>
       </div>
     <% end %>
-
     <%= yield %>
-    
   </div>
-
 </body>
 </html>
