--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,11 +1,13 @@
-<h1>All Wikis</h1>
-<div class="row">
-    <%= render @wikis %>
-    
-    <!-- below passes in class instance, defined WikiPolicy's :new? method to work with this use -->
-    <% if policy(Wiki).new? %>
-        <div class="col-md-4">
-            <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
-        </div>
-    <% end %>
+<div class="container main list">
+    <div class="col-md-8">
+        <h1>Collaboration Spaces</h1>
+        <%= render @wikis %>
+        <!-- below passes in class instance, defined WikiPolicy's :new? method to work with this use -->
+    </div>
+    <div class="col-md-4">
+        <%= image_tag image_path("gears.jpg"), class: "medium-img" %>
+        <% if policy(Wiki).new? %>
+            <%= link_to "Create a New Space", new_wiki_path, class: "btn btn-success" %>
+        <% end %>
+    </div>
 </div>
