--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New Wiki</h1>
-<div class="row">
-    <div class="col-md-4">
-        <p>This is where you can start creating the wiki document.</p>
-    </div>
+<div class="container main form">
     <div class="col-md-8">
+        <h2>New Space</h2>
+        <p>Feel free to build your collaboration space. This space offers markdown rendering.</p>
         <%= render partial: 'new', locals: { wiki: @wiki } %>
+    </div>
+    <div class="col-md-4">
+        <%= image_tag image_path("gears.jpg"), class: "medium-img" %>
     </div>
 </div>
