--- a/app/views/wikis/show.html.erb
+++ b/app/views/wikis/show.html.erb
@@ -1,36 +1,27 @@
-<div>
-    <h1>
-        <%= @wiki.title %> <br>
-        <small>
-            created <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.name %>
-        </small>
-    </h1>
-</div>
-<div class="row">
+<div class="container main list">
     <div class="col-md-8">
+        <h1><%= @wiki.title %></h1>
+        <small>created <%= time_ago_in_words(@wiki.created_at) %> ago by <%= @wiki.user.name %></small>
         <%= @markdown.render(@wiki.body).html_safe %>
     </div>
     <div class="col-md-4">
+        <%= image_tag image_path("bold.jpg"), class: "medium-img" %>
         <% if @wiki.private? %>
-            <h4>Current Collaborators</h4>
+            <h3>Current Collaborators</h3>
             <% if @wiki.collaborations != [] %>
                 <%= render @wiki.collaborations %>
-                <br>
             <% else %>
-                <p>There are currently no collaborators for this wiki.</p>
-                <br>
+                <p>There are currently no collaborators for this space.</p>
             <% end %>
             <% if policy(Collaboration.new(wiki: @wiki)).create? %>
                 <%= render partial: 'collaborations/add', locals: { wiki: @wiki, collaboration: @wiki.collaborations.new } %>
-                <br><br>
             <% end %>
         <% end %>
-
         <% if policy(@wiki).edit? %>
-            <%= link_to "Edit Wiki", edit_wiki_path, class: 'btn btn-success' %>
+            <%= link_to "Edit Space", edit_wiki_path, class: 'btn btn-success' %>
         <% end %>
         <% if policy(@wiki).destroy? %>
-            <%= link_to "Delete Wiki", [@wiki], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this wiki?'} %>
+            <%= link_to "Delete Space", [@wiki], method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure you want to delete this space?'} %>
         <% end %>
     </div>
 </div>
